--- a/Views/Pedidos/VisualizaPedido.cshtml
+++ b/Views/Pedidos/VisualizaPedido.cshtml
@@ -1,4 +1,5 @@
-﻿@model VidracariaDoMarcinho.Models.Orcamento
+﻿@using System.Globalization
+@model VidracariaDoMarcinho.Models.Orcamento
 
 <html>
 <head>
@@ -18,17 +19,6 @@
         </a>
     </div>
 
-    <h2>Detalhes do Pedido</h2>
-
-    <p><strong>Id:</strong> @Model.Id</p>
-    <p><strong>Cliente:</strong> @Model.Cliente?.Nome</p>
-    <p><strong>Data:</strong> @Model.Data.ToString("dd/MM/yyyy HH:mm")</p>
-    <p><strong>Status:</strong> @Model.Status</p>
-    <p><strong>Total:</strong> @Model.Total.ToString("C")</p>
-
-    <a class="hyperlink_tabela" href="@Url.Action("Index", "Pedidos")">
-        <div class="botao_tabela">Voltar</div>
-    </a>
 
     <div class="formulario">
         @using (@Html.BeginForm("CrudPedido", "Pedidos", FormMethod.Post, new { id = "form-crud-pedido" }))
@@ -93,14 +83,22 @@
             @Html.LabelFor(model => model.Total, htmlAttributes: new { @class = "total texto-form" })
 
             <br />
-            @Html.EditorFor(model => model.Total, new { htmlAttributes = new { @class = "total-input input-box texto-form" } })
+            @Html.TextBoxFor(model => model.Total, new {
+                id = "total-input",
+                @class = "total-input input-box texto-form",
+                type = "number",
+                step = "0.01",
+                min = "0",
+                value = Model.Total.ToString(CultureInfo.InvariantCulture),
+                onchange = "calculaValorParcela()"
+            })            
             <br />
 
             @* parcelas *@
             @Html.LabelFor(model => model.Parcelas, htmlAttributes: new { @class = "parcelas texto-form" })
 
             <br />
-            <input asp-for="Parcelas" class="cliente-pedido-input input-box texto-form" readonly="readonly" />
+            <input asp-for="Parcelas" id="parcelas-input" class="cliente-pedido-input input-box texto-form" readonly="readonly" />
 
             <br />
 
@@ -108,7 +106,16 @@
             @Html.LabelFor(model => model.ParcelasPagas, htmlAttributes: new { @class = "parcelas-pagas texto-form" })
 
             <br />
-            @Html.EditorFor(model => model.ParcelasPagas, new { htmlAttributes = new { @class = "parcelas-pagas-input input-box texto-form", Type = "number", min = "1"} })
+            @Html.EditorFor(model => model.ParcelasPagas, new {
+                htmlAttributes = new {
+                    id = "parcelas-pagas-input",
+                    @class = "parcelas-pagas-input input-box texto-form",
+                    type = "number",
+                    min = "1",
+                    onchange = "calculaValorParcela()",
+                    onblur = "calculaValorParcela()"
+                }
+            })
             <br />
 
             @* Gasolina *@
@@ -136,18 +143,65 @@
             @Html.LabelFor(model => model.ValorParcelas, htmlAttributes: new { @class = "valor-parcelas texto-form" })
 
             <br />
-            @Html.EditorFor(model => model.ValorParcelas, new { htmlAttributes = new { @class = "valor-parcelas-pagas-input input-box texto-form" } })
+            @Html.EditorFor(model => model.ValorParcelas, new { htmlAttributes = new {@id= "valor-parcelas-input", @class = "valor-parcelas-input input-box texto-form" } })
             <br />
 
-            @foreach (var item in Model.Itens)
-            {
-                <div>
-                    <label class="silicone-pagas texto-form">ID do Item</label>
-                    <br />
-                    <input type="text" value="@item.Id" class="silicone-pagas-input input-box texto-form" readonly />
-                    <br />
-                </div>
-            }
+            @* Valor Pago*@
+            @Html.LabelFor(model => model.ValorPago, htmlAttributes: new { @class = "valor-pago texto-form", onchange = "calculaValorParcela()"})
+
+            <br />
+            @Html.TextBoxFor(model => model.ValorPago, 
+                new { 
+                    @id = "valor-pago-input", 
+                    @class = "valor-pago-input input-box texto-form", 
+                    type = "number", 
+                    step = "0.50", 
+                    min = "0", 
+                    value = Model.ValorPago.ToString(CultureInfo.InvariantCulture),
+                    onchange = "calculaValorParcela()"
+                })
+            <br />
+
+            <table id="tabelaItens" class="table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Material</th>
+                        <th>Quantidade</th>
+                        <th>Preço Unitário</th>
+                        <th>Altura</th>
+                        <th>Largura</th>
+                        <th>Cor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.Vidros)
+                    {
+                        <tr>
+                            <td>@item.MaterialId</td>
+                            <td>@item.TipoVidro</td>
+                            <td>@item.Quantidade</td>
+                            <td>@item.Preco.ToString("C")</td>
+                            <td>@item.Altura</td>
+                            <td>@item.Largura</td>
+                            <td>@item.Cor</td>
+                        </tr>
+                    }
+                    @foreach (var item in Model.Itens)
+                    {
+                        <tr>
+                            <td>@item.MaterialId</td>
+                            <td>@item.Material?.Nome</td>
+                            <td>@item.Quantidade</td>
+                            <td>@item.PrecoUnitario.ToString("C")</td>
+                            <td></td>
+                            <td></td>
+                            <td>@item.Material?.Cor</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+
 
 
 
